--- a/src/lib/components/nodeeditor.css
+++ b/src/lib/components/nodeeditor.css
@@ -77,4 +77,25 @@ input[type="range"][data-flume-component="text-input-slider"]::-moz-range-thumb 
 [data-flume-component='control-label-slider'] {
     color: #bbbbbb;
     font-size: 13px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    pointer-events: none;
+}
+[data-flume-component='slider'] {
+    position: relative;
+    width: 100%;
+    height: 1.5rem;
+}
+[data-flume-component='control-slider-fill'] {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background-color: #336699;
+    border-radius: 1.5rem;
+    z-index: 1;
+    pointer-events: none;
 }
