--- a/src/lib/components/nodeeditor.css
+++ b/src/lib/components/nodeeditor.css
@@ -33,6 +33,10 @@ input[type="range"][data-flume-component="text-input-slider"] {
     background: transparent;
     cursor: pointer;
     width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin:0;
 }
 
 /***** Chrome, Safari, Opera and Edge Chromium styles *****/
